Update description (avoids wrapping) Remove categories from blog post permalinks Rename httpserver post Add icon via CSS Move SVG icon to assets/images

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1,5 +1,6 @@
 ---
 ---
+$baseurl: "{{ site.baseurl }}";
 
 {% if site.theme %}
     @import "{{ site.theme }}";
